--- a/crd.yaml
+++ b/crd.yaml
@@ -54,3 +54,59 @@ data:
   password: ZXhhcGxlCg==
   database: ZXhhcGxlCg==
 
+---
+
+apiVersion: "apiextensions.k8s.io/v1"
+kind: CustomResourceDefinition
+metadata:
+  name: redisclusters.stable.badsysadm.com
+spec:
+  group: stable.badsysadm.com
+  versions:
+    - name: v1
+      served: true
+      storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              properties:
+                hosts:
+                  type: array
+                  items:
+                    type: string
+                secret:
+                  type: string
+  scope: Namespaced
+  names:
+    plural: redisclusters
+    singular: rediscluster
+    kind: RedisCluster
+    shortNames:
+    - rdc
+
+---
+
+apiVersion: "stable.badsysadm.com/v1"
+kind: RedisCluster
+metadata:
+  name: redis-sentinel
+spec:
+  hosts:
+    - 192.168.0.1:26379
+    - 192.168.0.2:26379
+    - 192.168.0.3:26379
+  name: mymaster
+  secret: redis-admin
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: redis-admin
+type: Opaque
+data:
+  auth: ZXhhcGxlCg==
